--- a/src/Stars.Console/Terradue.Stars.Console.csproj
+++ b/src/Stars.Console/Terradue.Stars.Console.csproj
@@ -2,20 +2,20 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net5.0</TargetFrameworks>
-    <Version>0.9.42</Version>
+    <Version>1.0.0</Version>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
-    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
+    <VersionSuffix>beta.1</VersionSuffix>
     <AssemblyName>Stars</AssemblyName>
     <UserSecretsId>f195eead-6dad-49d2-ad76-d9dbf6662371</UserSecretsId>
-    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64;centos.7-x64</RuntimeIdentifiers>
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="appsettings.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="PreserveNewest">
       <LinuxPath>/etc/Stars/appsettings.json</LinuxPath>
     </Content>
-    <Content Include="../Stars.Data/appsettings.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="PreserveNewest">
-      <LinuxPath>/etc/Stars/conf.d/terradue.json</LinuxPath>
+    <Content Include="../Stars.Data/stars-data.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="PreserveNewest">
+      <LinuxPath>/etc/Stars/conf.d/stars-data.json</LinuxPath>
     </Content>
   </ItemGroup>
   <ItemGroup>
