--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -4,9 +4,9 @@
     <ProjectName>Terradue.Stars.Data</ProjectName>
     <Title>Terradue.Stars.Data</Title>
     <Description>Collection of data Plugins for Terradue.Stars</Description>
-    <Version>0.9.46</Version>
+    <Version>1.0.0</Version>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
-    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
+    <VersionSuffix>beta.1</VersionSuffix>
     <NoWarn>NU1603</NoWarn>
     <PackageId>Terradue.Stars.Data</PackageId>
     <PackageTags>STAC;OpenSearch;Terradue;Geo;Json</PackageTags>
@@ -35,20 +35,24 @@
     <PackageReference Include="Terradue.OpenSearch.GeoJson" Version="1.4.5" />
     <PackageReference Include="Terradue.GeoJson" Version="1.12.1" />
   </ItemGroup>
-  <ItemGroup><!-- <ProjectReference Include="../../../sugar/Terradue.OpenSearch.Asf/Terradue.OpenSearch.Asf/Terradue.OpenSearch.Asf.csproj" /> -->
+  <ItemGroup>
+    <!-- <ProjectReference Include="../../../sugar/Terradue.OpenSearch.Asf/Terradue.OpenSearch.Asf/Terradue.OpenSearch.Asf.csproj" /> -->
     <!-- <ProjectReference Include="../../../../Components/systems/Stars/src/Stars.Services/Terradue.Stars.Services.csproj" />
     <ProjectReference Include="../../../../Components/systems/Stars/src/Stars.Interface/Terradue.Stars.Interface.csproj" />
     <ProjectReference Include="../../../../Components/systems/Stars/src/Stars.Geometry/Terradue.Stars.Geometry.csproj" /> -->
     <!-- <ProjectReference Include="../../../../Components/sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
-  
+
     <ProjectReference Include="..\Stars.Services\Terradue.Stars.Services.csproj" />
-  
+
     <ProjectReference Include="..\Stars.Interface\Terradue.Stars.Interface.csproj" />
-  
+
     <ProjectReference Include="..\Stars.Geometry\Terradue.Stars.Geometry.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\LICENSE" Pack="true" PackagePath="" />
     <None Include="..\docs\logo\Stars_logo.png" Pack="true" PackagePath="" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="stars-data.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="PreserveNewest"></Content>
   </ItemGroup>
 </Project>
