--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -5,8 +5,8 @@
     <Title>Terradue.Stars.Data</Title>
     <Description>Collection of data Plugins for Terradue.Stars</Description>
     <Version>1.0.0</Version>
-    <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <VersionSuffix>beta.1</VersionSuffix>
+    <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <NoWarn>NU1603</NoWarn>
     <PackageId>Terradue.Stars.Data</PackageId>
     <PackageTags>STAC;OpenSearch;Terradue;Geo;Json</PackageTags>
@@ -49,8 +49,8 @@
     <ProjectReference Include="..\Stars.Geometry\Terradue.Stars.Geometry.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\LICENSE" Pack="true" PackagePath="" />
-    <None Include="..\docs\logo\Stars_logo.png" Pack="true" PackagePath="" />
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
+    <None Include="..\..\docs\logo\Stars_logo.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="stars-data.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="PreserveNewest"></Content>
