--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -19,6 +19,8 @@
     <Company>Terradue</Company>
     <LicenseUrl>https://creativecommons.org/licenses/by-nc-sa/4.0/</LicenseUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Nullable>enable</Nullable>
+    <LangVersion>8.0</LangVersion>
     <NoWarn>$(NoWarn);NU1605</NoWarn>
   </PropertyGroup>
   <ItemGroup>
