--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <InvariantGlobalization>true</InvariantGlobalization>
     <!-- <NoWarn>NU1603</NoWarn> -->
+    <NoWarn>$(NoWarn);NU1605</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.*" />
