--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -5,7 +5,7 @@
     <Title>Terradue.Stars.Data</Title>
     <Description>Collection of data Plugins for Terradue.Stars</Description>
     <Version>1.0.0</Version>
-    <VersionSuffix>beta.2</VersionSuffix>
+    <VersionSuffix>beta.3</VersionSuffix>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <NoWarn>NU1603</NoWarn>
     <PackageId>Terradue.Data.Stars</PackageId>
@@ -43,9 +43,15 @@
     <ProjectReference Include="../../../../Components/systems/Stars/src/Stars.Interface/Terradue.Stars.Interface.csproj" />
     <ProjectReference Include="../../../../Components/systems/Stars/src/Stars.Geometry/Terradue.Stars.Geometry.csproj" /> -->
     <!-- <ProjectReference Include="../../../../Components/sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" /> -->
-    <ProjectReference Include="..\Stars.Services\Terradue.Stars.Services.csproj" />
-    <ProjectReference Include="..\Stars.Interface\Terradue.Stars.Interface.csproj" />
-    <ProjectReference Include="..\Stars.Geometry\Terradue.Stars.Geometry.csproj" />
+    <ProjectReference Include="..\Stars.Services\Terradue.Stars.Services.csproj" >
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\Stars.Interface\Terradue.Stars.Interface.csproj" >
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\Stars.Geometry\Terradue.Stars.Geometry.csproj" >
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
