--- a/src/Stars.Tests/Stars.Tests.csproj
+++ b/src/Stars.Tests/Stars.Tests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.*" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.NewtonsoftJson" Version="5.0.*" />
     <PackageReference Include="Xunit.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="Xunit.DependencyInjection.Logging" Version="2.1.0" />
     <PackageReference Include="DotNet.Testcontainers" Version="1.4.0" />
