--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -31,8 +31,8 @@
     <PackageReference Include="Terradue.MetadataExtractor" Version="1.3.0" />
     <PackageReference Include="ProjNet" Version="2.0.0" />
     <PackageReference Include="MimeTypes" Version="2.0.2" />
-    <PackageReference Include="Terradue.OpenSearch.SciHub" Version="1.14.12" />
-    <PackageReference Include="Terradue.OpenSearch.Asf" Version="1.2.15" />
+    <PackageReference Include="Terradue.OpenSearch.SciHub" Version="1.14.*" />
+    <PackageReference Include="Terradue.OpenSearch.Asf" Version="1.2.*" />
     <PackageReference Include="DotNetStac" Version="1.1.*" />
     <PackageReference Include="Terradue.OpenSearch.GeoJson" Version="1.4.5" />
     <PackageReference Include="Terradue.GeoJson" Version="1.12.1" />
