--- a/src/Stars.Tests/Stars.Tests.csproj
+++ b/src/Stars.Tests/Stars.Tests.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.*" />
     <PackageReference Include="Xunit.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Xunit.DependencyInjection.Logging" Version="8.0.0" />
-    <PackageReference Include="DotNet.Testcontainers" Version="1.4.0" />
+    <PackageReference Include="DotNet.Testcontainers" Version="1.6.0-beta.2028" />
   </ItemGroup>
 
   <ItemGroup>
