--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -5,7 +5,7 @@
     <Title>Terradue.Stars.Data</Title>
     <Description>Collection of data Plugins for Terradue.Stars</Description>
     <Version>1.0.0</Version>
-    <VersionSuffix>beta.26</VersionSuffix>
+    <!-- <VersionSuffix>beta.26</VersionSuffix> -->
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <NoWarn>NU1603</NoWarn>
     <PackageId>Terradue.Data.Stars</PackageId>
