fix resursp canprocess + keep asset

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -526,7 +526,7 @@
             }
         },
         {
-            "name": "Copy S2 on S3",
+            "name": "Copy S2",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -535,7 +535,8 @@
             "args": [
                 "copy",
                 "-v",
-                "https://tamn.snapplanet.io/collections/S2/items/d0f257c7-522c-537c-b911-ee00b5ac863e",
+                "https://catalog.terradue.com/sentinel2/search?uid=S2B_MSIL2A_20200130T004659_N0213_R102_T53HPA_20200130T022348&do=[terradue]",
+                "--harvest",
                 "-r",
                 "4",
                 "--output",
