--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -236,10 +236,9 @@
                 "copy",
                 "-v",
                 "https://catalog.terradue.com/sentinel3/search?format=atom&uid=S3B_SL_2_LST____20200624T090133_20200624T090433_20200624T105644_0180_040_221_2700_LN2_O_NR_004",
-                "https://catalog.terradue.com/sentinel3/search?format=atom&uid=S3B_SL_2_LST____20200623T092744_20200623T093044_20200624T153106_0180_040_207_2700_LN2_O_NT_004",
-                "https://catalog.terradue.com/sentinel3/search?format=atom&start=2020-03-06&bbox=-5.801%2C14.009%2C-3.076%2C16.215&pt=SL_2_LST___&od=DESCENDING",
                 "-r",
                 "4",
+                "--harvest",
                 "--output",
                 "/tmp/stars"
             ],
