--- a/src/Stars.Tests/Stars.Tests.csproj
+++ b/src/Stars.Tests/Stars.Tests.csproj
@@ -15,9 +15,11 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration.NewtonsoftJson" Version="5.0.*" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.*" />
     <PackageReference Include="Xunit.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Xunit.DependencyInjection.Logging" Version="8.0.0" />
     <PackageReference Include="DotNet.Testcontainers" Version="1.6.0-beta.2028" />
+    <PackageReference Include="MELT" Version="0.7.0" />
   </ItemGroup>
 
   <ItemGroup>
