--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -41,6 +41,9 @@
     <PackageReference Include="S3.System.Net" Version="0.4.*" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.9" />
+    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.5.*"/>
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.5.*"/>
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.7.*"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../../../../sugar/DotNetStac/src/DotNetStac/DotNetStac.csproj" />
