--- a/src/Stars.Interface/Terradue.Stars.Interface.csproj
+++ b/src/Stars.Interface/Terradue.Stars.Interface.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.*" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.0.*" />
     <PackageReference Include="DotNetStac" Version="1.2.*" />
   </ItemGroup>
   <ItemGroup>
