--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.*" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.*" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.0.*" />
     <PackageReference Include="System.IO.Abstractions" Version="16.1.25" />
     <PackageReference Include="Terradue.ServiceModel.Syndication" Version="1.1.1" />
     <PackageReference Include="Terradue.ServiceModel.Ogc" Version="2.2.0" />
@@ -39,6 +40,8 @@
     <PackageReference Include="MimeTypes" Version="2.0.2" />
     <PackageReference Include="DotNetZip" Version="1.15.0" />
     <PackageReference Include="S3.System.Net" Version="0.4.*" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.5.*"/>
+    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.5.*"/>
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.9" />
   </ItemGroup>
