--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="Terradue.GeoJson" Version="1.12.1"/>
     <PackageReference Include="MaxRev.Gdal.Core" Version="3.3.3.110"/>
     <PackageReference Include="MaxRev.Gdal.LinuxRuntime.Minimal" Version="3.3.3.120"/>
+    <PackageReference Include="AWSSDK.Core" Version="3.5.*"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stars.Services\Terradue.Stars.Services.csproj">
