--- a/src/Stars.Tests/Stars.Tests.csproj
+++ b/src/Stars.Tests/Stars.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
+    <ProduceReferenceAssemblyInOutDir>true</ProduceReferenceAssemblyInOutDir>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -20,6 +20,7 @@
     <PackageReference Include="Xunit.DependencyInjection.Logging" Version="8.0.0" />
     <PackageReference Include="DotNet.Testcontainers" Version="1.6.0-beta.2028" />
     <PackageReference Include="MELT" Version="0.7.0" />
+    <PackageReference Include="AWSSDK.Core" Version="3.5.*"/>
   </ItemGroup>
 
   <ItemGroup>
