--- a/src/Stars.Services/Terradue.Stars.Services.csproj
+++ b/src/Stars.Services/Terradue.Stars.Services.csproj
@@ -39,10 +39,11 @@
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     <PackageReference Include="MimeTypes" Version="2.0.2" />
     <PackageReference Include="DotNetZip" Version="1.15.0" />
-    <PackageReference Include="AWSSDK.Core" Version="3.5.*"/>
-    <PackageReference Include="AWSSDK.S3" Version="3.5.*"/>
-    <PackageReference Include="AWSSDK.SecurityToken" Version="3.5.*"/>
-    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.5.*"/>
+    <PackageReference Include="AWSSDK.Core" Version="3.7.*"/>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.*"/>
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.*"/>
+    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.*"/>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.*"/>
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.9" />
     <PackageReference Include="HttpClient.Caching" Version="1.2.*"/>
