DATAAUTHOR-196: S3 region OK

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -803,7 +803,17 @@
             "stopAtEntry": false,
             "logging": {
                 "moduleLoad": false
-            }
+            },
+            "justMyCode": false,
+            "requireExactSource": false,
+            // "symbolOptions": {
+            //     // "searchPaths": [
+            //     //     "/data/workspace/Others/aws-sdk-net/sdk/src"
+            //     // ],
+            //     "searchMicrosoftSymbolServer": true,
+            //     "searchNuGetOrgSymbolServer": true
+            // },
+            "enableStepFiltering": false
         },
         {
             "name": ".NET Core Attach",
