--- a/src/Stars.Console/appsettings.json
+++ b/src/Stars.Console/appsettings.json
@@ -1,5 +1,10 @@
 {
   "Global": {
     "ForceOverwrite": "false"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Microsoft": "Information"
+    }
   }
 }
