new container build

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -672,20 +672,18 @@
             "program": "${workspaceFolder}/src/Stars.Console/bin/Debug/net5.0/Stars.dll",
             "args": [
                 "copy",
-                "https://catalog.charter.uat.esaportal.eu//charter/search?format=atom&uid=call1016_S2B_MSIL2A_20210713T184919_N0301_R113_T10TFK_20210713T213143-calibrated",
+                "s3://cpe-production-processing-results/wf-5df66150-cbc2-11ec-b82b-0a580a8206e0/catalog.json",
                 "-v",
                 "-r",
                 "4",
-                "-af",
-                "red",
-                "-af",
-                "green",
+                "--empty",
+                "--skip-assets",
                 "--output",
                 "/tmp/stars"
             ],
             "cwd": "${workspaceFolder}/src",
             "env": {
-                "AWS__Profile": "scw",
+                "AWS__Profile": "scw-cpe-prod",
                 "AWS__ServiceURL": "https://s3.pl-waw.scw.cloud",
                 "AWS__Region": "pl-waw",
                 "AWS__AuthenticationRegion": "pl-waw",
