--- a/src/Stars.Data/Terradue.Stars.Data.csproj
+++ b/src/Stars.Data/Terradue.Stars.Data.csproj
@@ -4,8 +4,8 @@
     <ProjectName>Terradue.Stars.Data</ProjectName>
     <Title>Terradue.Stars.Data</Title>
     <Description>Collection of data Plugins for Terradue.Stars</Description>
-    <Version>1.4.0</Version>
-    <!-- <VersionSuffix>beta.26</VersionSuffix> -->
+    <Version>2.0.0</Version>
+    <VersionSuffix>beta.1</VersionSuffix>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <NoWarn>NU1603</NoWarn>
     <NoWarn>$(NoWarn);NU1605</NoWarn>
