fixed extraction issue

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -736,7 +736,7 @@
             "args": [
                 "copy",
                 "-si",
-                "ONDA",
+                "CREO",
                 // "-si",
                 // "Native",
                 "-v",
